# cti-nlp-system

./: .env.example  Dockerfile  IMPLEMENTATION_SUMMARY.md  Makefile  README.md  START_SYSTEM.md  cti-nlp.service  docker-compose.dev.yml  pyproject.toml  pytest.ini  requirements.txt  setup.py
backend/: enhanced_analyzer.py  main.py  simple_enhanced_analyzer.py  threat_ner.py
dashboard/templates/: index.html
data/: ingested_cti.jsonl
database/: database.py  init.sql  models.py  services.py
docs/: API.md  DEPLOYMENT.md  DOCUMENTATION_CORRECTIONS.md  MODEL_ENHANCEMENT_REPORT.md  PROJECT_OVERVIEW.md  README.md  TEAM_QUICK_REFERENCE.md  USER_MANUAL.md
docs/01-getting-started/: API.md
docs/02-architecture/: 1. SCRIPTS_OVERVIEW.md  5. BACKEND_OVERVIEW.md  AI-ML-ARCHITECTURE.md  AI.md
docs/03-models/: 4. NER_MODEL.md  6. WHY_ENSEMBLE.md  MODEL_ENHANCEMENT_REPORT.md
docs/04-development/: DATASET.md
docs/06-testing/: TESTING.md
docs/07-research/: ACADEMIC_JUSTIFICATION_REPORT.md  GUIDE_PRESENTATION_SUMMARY.md
evaluation_results/: all_models_comparison.csv  classification_detailed_results.csv  model_summary_table.csv  model_summary_table.tex  severity_detailed_results.csv
nginx/: nginx.conf
scripts/: comprehensive_model_evaluation.py  cyber_ner_enhancement.py  enhanced_cybersecurity_ner.py  model_enhancement_phase1.py  statistical_analysis.py  train_advanced_classifier.py  train_advanced_severity_predictor.py  train_improved_models.py
tests/: conftest.py  run_tests.py  test_api.py  test_models.py
